[tool.poetry]
name = "poetry-init"
version = "0.1.0"
description = ""
authors = ["chesterXalan <mastenfor26@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
pydantic = "^2.9.2"
orjson = "^3.10.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0"
mypy = "^1.13.0"
commitizen = "^3.30.1"
datamodel-code-generator = "^0"


[tool.poetry.group.jupyter.dependencies]
notebook = "^7.2.2"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# <https://docs.astral.sh/ruff/settings/>
[tool.ruff]
required-version = ">=0.7.0"
target-version = "py312"
output-format = "concise"
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    ### Intentionally disabled
    "E501", # line-too-long (format 會自動處理)
    "COM812",  # missing-trailing-comma  (會與 ruff format 衝突)
    "ISC001",  # ingle-line-implicit-string-concatenation (會與 ruff format 衝突)
    "UP040",  # non-pep695-type-alias  (mypy no supported)
    "S101", # assert  (for pytest)
    "TRY400",  # error-instead-of-exception (logger 不要用 exception 取代 error)
    "TRY401",  # verbose-log-message (logger.exception 包含過多訊息)
    "B008",  # unction-call-in-default-argument (不要在默認參數中調用函數)
    "FBT003",  # boolean-positional-value-in-call (不要使用 True/False 作為函數的位置參數)
    "RUF001",  # ambiguous-unicode-character-string  (不要使用不明確的 Unicode 字元)
    "RUF002",  # ambiguous-unicode-character-docstring  (不要使用不明確的 Unicode 字元)
    "RUF003",  # ambiguous-unicode-character-comment  (不要使用不明確的 Unicode 字元)
    "RUF005",  # collection-literal-concatenation  (不要使用集合文字串連)
    "BLE001",  # flake8-blind-except  (不要使用 BaseException 或 Exception)
    "TID252",  # relative-imports  (不要使用父母/兄弟姊妹級別以外的 相對 import)
    "SIM117",  # multiple-with-statements  (不要使用嵌套 with)
    "B904",  # raise-without-from-inside-except  (不要使用 raise 但沒有 from)
    "FIX002",  # flake8-fixme  (註釋包含 TODO)
    "G",  # flake8-logging-format  (各種對 logger 的限制)
    "TD",  # flake8-todos  (註釋包含 TODO 的一大堆限制)

    ### TODO: Enable gradually
    "EM",  # flake8-errmsg  (錯誤訊息字串要先分配給變數)
    "D101",  # undocumented-public-class (未註釋的 public class)
    "D104",  # undocumented-public-package (未註釋的 public package)
    "D415",  # ends-in-punctuation (註釋結尾應該有標點符號)
    "TRY003",  # raise-vanilla-args  (自定義例外包含額外的長訊息)
    "EXE002",  # shebang-missing-executable-file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-returns = 6  # default is 6
max-branches = 12  # default is 12
max-args = 5  # default is 5
max-statements = 50  # default is 50

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]  # Ignore `D` rules everywhere except for the `src/` directory.
"tests/**/*.py" = ["PLR2004"]  # test allow magic value

[tool.ruff.format]
docstring-code-format = true

# <https://mypy.readthedocs.io/en/stable/config_file.html>
[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
exclude = ["playground"]
follow_imports = "silent"
pretty = true
no_site_packages = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_decorators = false

# <https://koxudaxi.github.io/datamodel-code-generator/>
[tool.datamodel-codegen]
target-python-version = "3.12"
output-model-type="pydantic_v2.BaseModel"
field-constraints = true
use-double-quotes = true
use-subclass-enum = true
set-default-enum-member = true
capitalise-enum-members = true
use-unique-items-as-set = true
use-standard-collections = true
use-union-operator = true
allow-population-by-field-name = true
snake-case-field = true
input-file-type = "openapi"
input = "playground/openapi.json"
output = "playground/model.py"
enable-version-header=true

# <https://commitizen-tools.github.io/commitizen/config/>
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
update_changelog_on_bump = true
